<resources>
    <string name="app_name">sample-firebase</string>
    <string name="main_button_label_register">Register</string>
    <string name="main_button_label_login">Login</string>
    <string name="main_button_label_open_chat">Open Chat</string>
    <string name="main_label_hint_digicel_id">Digicel ID</string>
    <string name="main_label_hint_username">Username</string>
    <string name="main_label_hint_email">Email</string>
    <string name="main_label_hint_Avatar">Avatar</string>
    <string name="main_label_text_avatar_helper_url">https://pbs.twimg.com/profile_images/1469062206377582600/8uH6FfBy_400x400.png</string>
    <string name="main_label_separator">- or -</string>
    <string name="main_label_button_logged_in">Logged in successfully!</string>
    <string name="main_label_chat_name">Chat Name</string>
    <string name="main_label_chat_image">Chat Image</string>
    <string name="main_label_chat_id">Chat ID</string>
</resources>